namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-official-visits-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-official-visits-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "public_move-and-improve"
    cloud-platform.justice.gov.uk/slack-alert-channel: "move-and-improve-alerts-non-prod"
    cloud-platform.justice.gov.uk/application: "HMPPS Official Visits"
    cloud-platform.justice.gov.uk/owner: "Move and Improve: move-and-improve@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-official-visits-api.git,https://github.com/ministryofjustice/hmpps-official-visits-ui.git"
    cloud-platform.justice.gov.uk/team-name: "hmpps-move-and-improve"
    cloud-platform.justice.gov.uk/review-after: ""
